# ShakeShake.io

./: 404.html  CNAME  Cargo.toml  Dioxus.toml  index.html
assets/dioxus/: shakeshake.js  shakeshake_bg.wasm
assets/tailwind/: tailwind.config.js
public/: CNAME
src/: main.rs
src/components/: icon.rs  mod.rs  nav.rs
src/hooks/: mode.rs
src/pages/: _404.rs  about.rs  discovery.rs  mod.rs  post.rs  user.rs
src/utils/: mod.rs
